--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 <body>
     <header class="main-header">
-        <img src="logo.jpg" alt="Team Logo" id="logo" style="max-width: 100px; border-radius: 50%; margin-bottom: 15px;">
-        <h1>Welcome to the World of Algorithms</h1>
+        <h1>DAA</h1>
     </header>
 
     <header class="secondary-header">
         <nav>
-            <a href="https://github.com/PrajwalAravatti/KGT.github.io">Github repository</a>
+            <a href="#">Github repository</a>
             <a href="projrct_intro.html">Project Overview</a>
             <a href="businesscases.html">Business Use Cases</a>
             <a href="reflections_team.html">Course Reflections</a>
