--- a/reflections_team.html
+++ b/reflections_team.html
@@ -24,16 +24,16 @@
         <h2>Click on a Team Member to View Their Reflections</h2>
         <div class="team-container">
             <div class="team-member">
-                <a href="sumanth/reflections_sumanth.html" target="_blank">Sumanth Shet</a>
+                <a href="sumanth/reflections_sumanth.html" target="_blank">Pratik </a>
             </div>
             <div class="team-member">
-                <a href="prajwal/refections_prajwal.html" target="_blank">Prajwal Aravatti</a>
+                <a href="prajwal/refections_prajwal.html" target="_blank">Sachidanand </a>
             </div>
             <div class="team-member">
-                <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">Mallikarjun Patil</a>
+                <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">vasnavi</a>
             </div>
             <div class="team-member">
-                <a href="subbramnnya/reflections.html" target="_blank">Subbramannya A T</a>
+                <a href="subbramnnya/reflections.html" target="_blank">prachi</a>
             </div>
         </div>
     </main>
