--- a/reflections_team.html
+++ b/reflections_team.html
@@ -27,7 +27,7 @@
                 <a href="Pratik/reflections_pratik.html" target="_blank">Pratik </a>
             </div>
             <div class="team-member">
-                <a href="prajwal/refections_prajwal.html" target="_blank">Sachidanand </a>
+                <a href="sachidanand /refections_sachidanand.html" target="_blank">Sachidanand </a>
             </div>
             <div class="team-member">
                 <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">vasnavi</a>
