--- a/reflections_team.html
+++ b/reflections_team.html
@@ -24,10 +24,10 @@
         <h2>Click on a Team Member to View Their Reflections</h2>
         <div class="team-container">
             <div class="team-member">
-                <a href="Pratik/reflections_pratik.html" target="_blank">Pratik </a>
+                <a href="reflections_pratik.html" target="_blank">Pratik </a>
             </div>
             <div class="team-member">
-                <a href="sachidanand /refections_sachidanand.html" target="_blank">Sachidanand </a>
+                <a href="refections_sachidanand.html" target="_blank">Sachidanand </a>
             </div>
             <div class="team-member">
                 <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">vasnavi</a>
