--- a/reflections_team.html
+++ b/reflections_team.html
@@ -30,10 +30,10 @@
                 <a href="refections_sachidanand.html" target="_blank">Sachidanand </a>
             </div>
             <div class="team-member">
-                <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">vasnavi</a>
+                <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">Vashnavi</a>
             </div>
             <div class="team-member">
-                <a href="subbramnnya/reflections.html" target="_blank">prachi</a>
+                <a href="subbramnnya/reflections.html" target="_blank">Prachi</a>
             </div>
         </div>
     </main>
